<resources>
    <string name="app_name">Bird Watch</string>
    <string name="bird_name_hint">Chirp Chirp, what\'s the bird\'s name?</string>
    <string name="bird_description_hint">Tell us more about the bird :D</string>
    <string name="bird_name_label">Name</string>
    <string name="bird_date_label">Date seen</string>
    <string name="bird_description_label">Description</string>
    <string name="action_bar_switch_theme_label">Switch Theme</string>
    <string name="action_bar_new_bird_label">New Bird Sighting</string>
    <string name="action_bar_show_bird_count">Show Bird Count</string>
    <string name="action_bar_hide_bird_count">Hide Bird Count</string>
    <string name="bird_count_format">%1$d birds</string>
    <string name="bird_remove">Remove Bird Sighting</string>
    <string name="bird_add">Confirm Bird Sighting</string>
    <string name="share_bird_text">Share Bird Sighting</string>
    <string name="bird_sighting_subject">BirdWatch: Bird Sighting</string>
    <string name="bird_sighting">%1$s sighted.\nThe bird was seen on %2$s.\nBird description: %3$s</string>
    <string name="device_no_support_camera">Your device does not support this function D:</string>
    <string name="bird_dialog_title">Choose a picture for the cute little bird :D</string>
    <string name="bird_dialog_camera">Take Picture with Camera</string>
    <string name="bird_dialog_gallery">Choose from Gallery</string>
    <string name="bird_dialog_cancel">Cancel</string>
</resources>